# AEGIS

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  LEADERBOARD.md  LICENSING.md  Makefile  README.md  SETUP.md  foundry.toml
.github/: PULL_REQUEST_TEMPLATE.md
aegis-gym/: coevolve.py  frontier.py  generalize.py  gym.py  oracle_frontier.py  pyproject.toml  train.py
aegis-gym/aegis/: __init__.py  active.py  agents.py  analysis.py  arena.py  classify.py  cli.py  dex.py  env.py  foundry.py  hunt.py  learn.py  mlp.py  pareto.py  registry.py  report.py  robust.py  space.py  submit.py  sweep.py  trajectory.py  transfer.py  wild.py
aegis-gym/data/: real_swap_impacts.json
aegis-gym/tests/: test_active.py  test_agents.py  test_analysis.py  test_arena.py  test_classify.py  test_dex.py  test_hunt.py  test_mlp.py  test_pareto.py  test_registry_report.py  test_robust.py  test_space.py  test_sweep.py  test_trajectory.py  test_transfer.py  test_wild.py
data/: DATASET.md  trajectories.jsonl
docs/: DESIGN.md  EXPLOITS.md  INTEGRATION.md  LIMITATIONS.md  PAPER.md  RL.md  ROADMAP.md  SCALING.md  SCENARIOS.md  WILD.md
examples/: ProtectedSwapPool.sol  README.md  TemplateDefense.sol
scoring/: coevolution.json  generalization.json  leaderboard.json  score.py  training.json
server/: README.md  app.py
src/: CircuitBreaker.sol
submissions/: Submission.sol
test/: Access.t.sol  Behavioral.t.sol  CircuitBreaker.t.sol  Composition.t.sol  ForkChainlink.t.sol  ForkConsensus.t.sol  ForkExploitInverse.t.sol  ForkImpact.t.sol  ForkOracle.t.sol  ForkRealMarkets.t.sol  (+19 more)
(+51 files in other folders)
